--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.1",
-    "material-ui": "^1.0.0-beta.44",
     "radium": "^0.24.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.1.5",
@@ -41,6 +40,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "typeface-roboto": "0.0.54"
