--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "material-ui": "^0.20.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "typeface-roboto": "0.0.54"
   }
 }
